# alpine-ghc-static

./: CHANGELOG.md  Dockerfile  Dockerfile.from_ghc_binary_package  README.md  alpine-stack-test.cabal  build.sh  package.yaml  stack.yaml
.github/workflows/: blank.yml
src/: Lib.hs
