cabal-version: 2.2

name:           alpine-stack-test
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/ocramz/alpine-stack-test#readme>
homepage:       https://github.com/ocramz/alpine-stack-test#readme
bug-reports:    https://github.com/ocramz/alpine-stack-test/issues
author:         Marco Zocca
maintainer:     example@example.com
copyright:      2025 Author name here
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ocramz/alpine-stack

library
  exposed-modules:
      Lib
  other-modules:
      Paths_alpine_stack_test
  autogen-modules:
      Paths_alpine_stack_test
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable test-app
  main-is: Main.hs
  other-modules:
      Paths_alpine_stack_test
  autogen-modules:
      Paths_alpine_stack_test
  hs-source-dirs:
      app
  ghc-options: 
  build-depends:
      alpine-stack-test
    , base >=4.7 && <5
  default-language: Haskell2010


